attempt: food reservation